<resources>
    <string name="app_name">雷哥托福</string>
    <string name="str_call_phone_no_permisson">拨打电话权限未授予</string>
    <string name="str_camera_no_permisson">相机权限未授予，去设置中心设置</string>
    <string name="str_read_external_no_permisson">相册权限未授予，去设置中心设置</string>
    <string name="str_loading_wait">请稍候…</string>
    <string name="str_loading">正在加载中&#8230;</string>
    <string name="str_retry_load">重新加载</string>
    <string name="str_pre_lesson">抢先学课</string>
    <string name="str_make_practice">做题练习</string>
    <string name="str_make_knowledge">知识库</string>
    <string name="str_toefl_circle">托福圈</string>
    <string name="str_center">个人中心</string>
    <string name="str_no_login">登录</string>
    <string name="str_no_login_tip">你还未登录，请先登录</string>
    <string name="str_remark_detail_et_hint">我也说一句</string>
    <string name="str_get_local_record_fail">获取记录失败</string>
    <string name="str_again_new_load">点击空白区域重新加载！</string>
    <string name="str_no_login_one">登录</string>
    <string name="str_no_login_two">登陆</string>
    <string name="str_login_hint_info">雷哥托福账号登录</string>
    <string name="str_remark_reply">你有%1$s条新消息</string>
    <string name="str_no_replay_yourself">不能回复自己</string>
    <string name="str_no_data_tip">暂无更多数据</string>
    <string name="str_community_post">发布于&#160;%1$s</string>
    <string name="str_remark_detail_title">文章详情</string>
    <string name="str_post_remark">发表帖子</string>
    <string name="str_post">发表</string>
    <string name="str_post_remark_enter_title">请输入标题</string>
    <string name="str_post_infor_enter_time">请选择考试时间</string>
    <string name="str_post_remark_enter_content">请输入内容</string>
    <string name="str_dialog_apk_downloding_msg">正在下载客户端(%1$d %2$s)</string>
    <string name="str_update_apk_title">发现新版本</string>
    <string name="str_update_apk_fail">下载失败</string>
    <string name="str_is_new_apk">已经是最新版本了!</string>
    <string name="str_update_apk_imme">立即更新</string>
    <string name="str_update_apk_wait">稍后更新</string>
    <string name="str_need_sdcard_permission">本功能需要读写SDCARD权限</string>
    <string name="str_open_fail">打开失败。请下载相应软件打开</string>
    <string name="str_file_no_exists">文件不存在或已损坏</string>
    <string name="str_post_after_download">评论后才能下载</string>
    <string name="str_downloading_des">正在下载（%1$d）</string>
    <string name="str_download_end_des">已下载（%1$d）</string>
    <string name="str_download_list">下载列表</string>
    <string name="str_dele">删除</string>
    <string name="str_grammar_test_title">语法学习(%1$d/30)</string>
    <string name="str_grammars_test_title">语法学习(%1$d/5)</string>
    <string name="str_grammar_des">语法：%1$s</string>
    <string name="str_grammar_knowledge_explain">知识讲解</string>
    <string name="str_error_feedback">题目错误反馈</string>
    <string name="str_grammar_start_practice">开始练习</string>
    <string name="str_listen_start_make">开始做题</string>
    <string name="str_listen_des">请认真听完录音后开始答题</string>
    <string name="str_grammar_commit_answer">提交答案</string>
    <string name="str_grammar_analyze">解析</string>
    <string name="str_grammar_next_question">下一题</string>
    <string name="str_start">继续</string>
    <string name="str_go_on">继续</string>
    <string name="str_delete">删除</string>
    <string name="str_schedule">%1$d/4</string>
    <string name="str_listen_and_choose">听单词，选择正确的翻译</string>
    <string name="str_word_explain">单词意译</string>
    <string name="str_example">例句</string>
    <string name="str_core_phonetic">[%1$s]</string>
    <string name="str_core_vocabulary_test_title">核心词汇(%1$d/30)</string>
    <string name="str_listen_time">%1$s/%2$s</string>
    <string name="str_see_en">点击查看英文</string>
    <string name="str_see_ch">点击查看中文</string>
    <string name="str_src_downloading">资源下载中，请稍后</string>
    <string name="str_page_num">&lt;%1$d/%2$d&gt;</string>
    <string name="str_question_num">&lt;%1$s/%2$s&gt;</string>
    <string name="str_listen_start_practice">开始练习</string>
    <string name="str_listen_start_practice_hint">请选择\n适合你的练习方式</string>
    <string name="str_listen_start_practice_top_hint">精听练习</string>
    <string name="str_listen_start_practice_make_hint">做题练习</string>
    <string name="str_please_choose">请选择</string>
    <string name="str_please_already_first">已经是第一题</string>
    <string name="str_please_choose_answer">请选择答案</string>
    <string name="str_please_choose_data">请选择日期</string>
    <string name="str_guide_des">立即使用</string>
    <string name="str_classification_course_study">课程学业</string>
    <string name="str_classification_school_life">校园生活</string>
    <string name="str_classification_natural_science">自然科学</string>
    <string name="str_classification_social_science">社会科学</string>
    <string name="str_classification_life_science">生命科学</string>
    <string name="str_classification_cultural_science">文化艺术</string>
    <string name="str_classifcation_course_des">共50篇</string>
    <string name="str_classification_school_life_des">共52篇</string>
    <string name="str_classification_natural_science_des">共59篇</string>
    <string name="str_classification_social_science_des">共48篇</string>
    <string name="str_classification_life_science_des">共45篇</string>
    <string name="str_classification_cultural_science_des">共52篇</string>
    <string name="str_empty_tip">亲，今天该休息啦！</string>
    <string name="str_nothing_tip">这里什么都没有哦</string>
    <string name="str_glossary_tip">请在网页版添加生词计划</string>
    <string name="str_pc_see">请在网页端查看</string>
    <string name="str_click_answer">点击答题</string>
    <string name="str_speak_praise_num">%1$s赞</string>
    <string name="str_speak_time_des">%1$d\'\'</string>
    <string name="str_write_record">写作记录</string>
    <string name="str_read_record">阅读记录</string>
    <string name="str_see_all_article">查看全文</string>
    <string name="str_listen_original">听力原文</string>
    <string name="str_read_full_text">阅读全文</string>
    <string name="str_file_destory">文件不存在或已损坏</string>
    <string name="str_end">完成%1$d/%2$d</string>
    <string name="str_make_record_hint">共%1$d句，完成%2$s句</string>
    <string name="str_listen_num_hint">累计精听%1$s次</string>
    <string name="str_go_on_practice">继续练习</string>
    <string name="str_go_on_fine_listen">继续精听</string>
    <string name="str_go_on_record_make_topic">继续做题</string>
    <string name="str_see_result">查看结果</string>
    <string name="str_sec_listen_item_des">正确率：%1$s&#160;耗时：%2$s</string>
    <string name="str_download">下载</string>
    <string name="str_see">查看</string>
    <string name="str_single">单句</string>
    <string name="str_full_text">全文</string>
    <string name="str_listen_write">听写</string>
    <string name="str_click_hint_info">点击屏幕显示原文</string>
    <string name="str_listen_hint_info">把你所听到的都写下来吧！</string>
    <string name="str_listen_topic_hint_info">第%1$d/%2$d题</string>
    <string name="str_glossary_word_num">共%1$s个</string>
    <string name="str_glossary_time_des">%1$s-%2$s</string>
    <string name="str_word_phonetic">英[%1$s]&#160;美[%2$s]</string>
    <string name="str_answer_analyze">答案解析</string>
    <string name="str_last_question">上一题</string>
    <string name="str_show_answer">显示答案</string>
    <string name="str_next_question">下一题</string>
    <string name="str_passage">Passage%1$d</string>
    <string name="str_read_practice_tpo_tab_title">TPO阅读练习</string>
    <string name="str_read_practice_tpo_title">TPO练习</string>
    <string name="str_read_practice_tpo_des">50套TPO全方位满足你的需求</string>
    <string name="str_read_practice_og_title">OG真题练习</string>
    <string name="str_read_practice_og_question_title">OG-%1$s</string>
    <string name="str_read_practice_tpo_question_title">TPO-Passage%1$d</string>
    <string name="str_glod_speak_title">黄金口语80套</string>
    <string name="str_glod_speak_practice_title">黄金口语练习</string>
    <string name="str_speak_practice_title">口语练习</string>
    <string name="str_speak_all_answer">全部答案</string>
    <string name="str_speak_answer_idea">答题思路</string>
    <string name="str_glod_speak_des">精选口语练习</string>
    <string name="str_read_practice_og_des">各类对话题型练习</string>
    <string name="str_write_tpo_title">TPO写作练习</string>
    <string name="str_read__ndependent_topic_title">独立话题练习</string>
    <string name="str_read_independent_topic_title">独立话题&#160;%1$s</string>
    <string name="str_read_tpo_title">TPO&#160;%1$s</string>
    <string name="str_write_independent_practiec">%1$d人练习过</string>
    <string name="str_write_independent_practiec_detail">问题</string>
    <string name="str_write_independent_start">开始写作</string>
    <string name="str_write_answer_post">发表文字</string>
    <string name="str_write_answer_commit">提交</string>
    <string name="str_audition_tip">试听</string>
    <string name="str_write_hint">从这里开始写&#8230;</string>
    <string name="str_please_enter_content">写点东西先</string>
    <string name="str_search_result_detail">查看详情</string>
    <string name="str_again_test">重新写作</string>
    <string name="str_reservation_write">预约写作精批</string>
    <string name="str_again_make_test">重新做题</string>
    <string name="str_again_make_test_speak">重新练习</string>
    <string name="str_time_des">时间：%1$s</string>
    <string name="str_word_num">单词数量</string>
    <string name="str_use_time">总耗时：%1$s</string>
    <string name="str_result_use_time">耗时</string>
    <string name="str_correct_avg">正确率</string>
    <string name="str_remark_new_msg_title">新消息</string>
    <string name="str_see_result_title">查看结果</string>
    <string name="str_see_result_detail_title">查看详情</string>
    <string name="str_wave_center_des">%1$d/%2$d</string>
    <string name="str_set_no_see_pwd">*&#160;*&#160;*&#160;*&#160;*&#160;*&#160;*</string>
    <string name="str_header_camera">拍照</string>
    <string name="str_header_photo">从相册选择</string>
    <string name="str_set_title">更多设置</string>
    <string name="str_user_info">个人信息</string>
    <string name="str_user_setting">个人设置</string>
    <string name="str_set_head">头像</string>
    <string name="str_set_name">用户名</string>
    <string name="str_set_nick_name">昵称</string>
    <string name="str_set_phone">电话</string>
    <string name="str_set_email">邮箱</string>
    <string name="str_set_pwd">密码</string>
    <string name="str_set_about_we">关于我们</string>
    <string name="str_set_gov_net">官方网站</string>
    <string name="str_set_gmat_net">www.toeflonline.cn</string>
    <string name="str_set_wx_num">微信公众号</string>
    <string name="str_set_wx_num_info">toeflgo</string>
    <string name="str_set_gmat_qq">小申托福备考群</string>
    <string name="str_set_gmat_qq_number">25727105340</string>
    <string name="str_set_clear_cache">清楚缓存</string>
    <string name="str_set_version">版本检测</string>
    <string name="str_set_font_size">字体大小</string>
    <string name="str_set_feed_back">意见反馈</string>
    <string name="str_set_exit">退出当前账户</string>
    <string name="str_set_modify_nick_name">修改昵称</string>
    <string name="str_set_nick_name_tip">请填写昵称</string>
    <string name="str_set_modify_com">与当前昵称一致，无须修改</string>
    <string name="str_set_modify_user_name_fail_tip">用户名不能修改</string>
    <string name="str_set_modify_phone_title">修改手机号</string>
    <string name="str_set_modify_email_title">修改邮箱</string>
    <string name="str_set_phone_tip">请填写手机号</string>
    <string name="str_set_email_tip">请填写邮箱</string>
    <string name="str_set_nick_title">先起一个闪亮亮的昵称吧</string>
    <string name="str_determine">确定</string>
    <string name="str_confirm_re">确认</string>
    <string name="str_cancel">取消</string>
    <string name="str_new_set_nick_name_tip">2&#8211;8位，不可使用特殊字符，以后可随时更改</string>
    <string name="str_login_account">请输入手机号/邮箱</string>
    <string name="str_register">注册</string>
    <string name="str_retrieve_pwd">找回密码</string>
    <string name="str_enter_your_pwd">请输入5～16位密码</string>
    <string name="str_enter_your_new_pwd">请输入你的新密码</string>
    <string name="str_enter_auth_code">请输入验证码</string>
    <string name="str_auth_code">验证码</string>
    <string name="str_has_account_go_login">已有账号，立即登录</string>
</resources>