<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray"
    android:orientation="vertical">

    <RelativeLayout
        style="@style/custome_title_bar_style">

        <ImageView
            android:id="@+id/left_back"
            style="@style/register_back_style"/>

        <TextView
            style="@style/title_tv_style"
            android:layout_centerInParent="true"
            android:text="@string/str_register"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/border_space_thr"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_account"
            style="@style/register_border_style"
            android:hint="@string/str_login_account"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/border_space_sec_max_m"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/register_input_auth_code"
                style="@style/register_border_style"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/str_enter_auth_code"/>

            <TextView
                android:id="@+id/register_auth_code"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/border_space"
                android:background="@drawable/auth_code_shape"
                android:gravity="center"
                android:text="@string/str_auth_code"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_ml"/>

        </LinearLayout>

        <EditText
            android:id="@+id/register_input_password"
            style="@style/register_border_style"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/border_space_sec_max_m"
            android:hint="@string/str_enter_your_pwd"/>

        <TextView
            android:id="@+id/register"
            style="@style/btn_login_style"
            android:text="@string/str_register"/>

        <TextView
            android:id="@+id/no_register_go_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/border_space_sec"
            android:text="@string/str_has_account_go_login"
            android:textColor="@color/color_txt_dark_gray"/>
    </LinearLayout>
</LinearLayout>